--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "prosemirror-example-setup": "^1.1.2",
+    "prosemirror-model": "^1.13.1",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-state": "^1.3.3",
+    "prosemirror-view": "^1.16.5",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
