--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "chart.js": "^2.9.4",
+    "chartkick": "^3.2.1",
     "prosemirror-example-setup": "^1.1.2",
     "prosemirror-model": "^1.13.1",
     "prosemirror-schema-basic": "^1.1.2",
