--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rucksack",
   "private": true,
   "dependencies": {
+    "@jaames/iro": "^5.3.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.0",
     "@rails/activestorage": "^6.0.0",
